--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,16 +5,17 @@ model_settings:
 
 phi3model_settings:
   name: "microsoft/Phi-3-mini-4k-instruct"
-  type: "local" # Helps your code know to load it locally
-  temperature: 0.0 # Set to 0 for consistent security testing
+  type: "local" # Helps my code know to load it locally
+  temperature: 0.0  
 
 garak:
-  probes: ["promptinject", "jailbreak"]
+  probes: ["promptinject","dan", "jailbreak"]
+  generations: 5
 
 patches:
   prompt_patch: false
   output_patch: false
 
-garak:
+garak_:
   probes: []
   output_patch: "results/"
