commit_after_repo_cleaning

--- a/configs/week4/patches_ablation_setting.yaml
+++ b/configs/week4/patches_ablation_setting.yaml
@@ -1,8 +1,8 @@
 ablation_setting: 
   policy_prompt:
-    enabled: false
+    enabled: true
   input_sanitize:
     enabled: true
   output_enforce:
-    enabled: false
+    enabled: true
     
